--- a/web.iras3/public/index.html
+++ b/web.iras3/public/index.html
@@ -80,7 +80,7 @@ Application Controllers
 <script src="/modules/chart/chart-selection-service.js"></script>
 <script src="/modules/chart/chart-category-service.js"></script>
 <script src="/modules/chart/chart-tag-service.js"></script>
-
+<script src="/modules/chart/chart-indicator-service.js"></script>
 
 <!-- Chart Page Module -->
 <script src="/modules/chart-page/chart-page-module.js"></script>
