Full Table Chart

--- a/web.iras3/public/index.html
+++ b/web.iras3/public/index.html
@@ -73,6 +73,13 @@ Application Controllers
 <script src="/modules/category-tag-filter/category-tag-filter-directive.js"></script>
 <link href="/modules/category-tag-filter/category-tag-filter-directive.css" rel="stylesheet">
 
+<!-- Full Table Module -->
+<script src="/modules/full-table-chart/full-table-chart-module.js"></script>
+<!-- Directives -->
+<script src="/modules/full-table-chart/full-table-chart-directive.js"></script>
+<link href="/modules/full-table-chart/full-table-chart-directive.css" rel="stylesheet"> 
+
+
 <!-- Chart Module -->
 <script src="/modules/chart/chart-module.js"></script>
 <!-- Services -->
