--- a/web.iras3/public/index.html
+++ b/web.iras3/public/index.html
@@ -23,7 +23,6 @@
 
 
 <!-- Bootmetro -->
-
 <link href="/bootmetro/assets/css/bootmetro-icons.css" rel="stylesheet">
 
 <!-- MetroUI Icons CSS -->
@@ -77,7 +76,7 @@ Application Controllers
 <script src="/modules/full-table-chart/full-table-chart-module.js"></script>
 <!-- Directives -->
 <script src="/modules/full-table-chart/full-table-chart-directive.js"></script>
-<link href="/modules/full-table-chart/full-table-chart-directive.css" rel="stylesheet"> 
+<link href="/modules/full-table-chart/full-table-chart-directive.css" rel="stylesheet">
 
 
 <!-- Chart Module -->
@@ -89,17 +88,17 @@ Application Controllers
 <script src="/modules/chart/chart-tag-service.js"></script>
 <script src="/modules/chart/chart-indicator-service.js"></script>
 
-<!-- Chart Page Module -->
-<script src="/modules/chart-page/chart-page-module.js"></script>
+<!-- Full Table Chart Page 0215 Module -->
+<script src="/modules/full-table-chart-page-0215/full-table-chart-page-0215-module.js"></script>
 <!-- Pages -->
-<script src="/modules/chart-page/chart-page.js"></script>
-<link href="/modules/chart-page/chart-page.css" rel="stylesheet">
+<script src="/modules/full-table-chart-page-0215/full-table-chart-page-0215.js"></script>
+<link href="/modules/full-table-chart-page-0215/full-table-chart-page-0215.css" rel="stylesheet">
 
 <!-- Chart Filter Page Module -->
-<script src="/modules/chart-filter-page/chart-filter-page-module.js"></script>
+<script src="/modules/chart-filter-page-0215/chart-filter-page-0215-module.js"></script>
 <!-- Pages -->
-<script src="/modules/chart-filter-page/chart-filter-page.js"></script>
-<link href="/modules/chart-filter-page/chart-filter-page.css" rel="stylesheet">
+<script src="/modules/chart-filter-page-0215/chart-filter-page-0215.js"></script>
+<link href="/modules/chart-filter-page-0215/chart-filter-page-0215.css" rel="stylesheet">
 
 <!-- Application Module -->
 <script src="/modules/app/app.js"></script>
