--- a/web.iras3/public/index.html
+++ b/web.iras3/public/index.html
@@ -78,6 +78,11 @@ Application Controllers
 <script src="/modules/full-table-chart/full-table-chart-directive.js"></script>
 <link href="/modules/full-table-chart/full-table-chart-directive.css" rel="stylesheet">
 
+<!-- Summary Table Module -->
+<script src="/modules/summary-table-chart/summary-table-chart-module.js"></script>
+<!-- Directives -->
+<script src="/modules/summary-table-chart/summary-table-chart-directive.js"></script>
+<link href="/modules/summary-table-chart/summary-table-chart-directive.css" rel="stylesheet">
 
 <!-- Chart Module -->
 <script src="/modules/chart/chart-module.js"></script>
@@ -93,6 +98,14 @@ Application Controllers
 <!-- Pages -->
 <script src="/modules/full-table-chart-page-0215/full-table-chart-page-0215.js"></script>
 <link href="/modules/full-table-chart-page-0215/full-table-chart-page-0215.css" rel="stylesheet">
+
+
+<!-- Summary Table Chart Page 0215 Module -->
+<script src="/modules/summary-table-chart-page-0215/summary-table-chart-page-0215-module.js"></script>   
+<!-- Pages -->
+<script src="/modules/summary-table-chart-page-0215/summary-table-chart-page-0215.js"></script>
+<link href="/modules/summary-table-chart-page-0215/summary-table-chart-page-0215.css" rel="stylesheet">
+
 
 <!-- Chart Filter Page Module -->
 <script src="/modules/chart-filter-page-0215/chart-filter-page-0215-module.js"></script>
