Description Table Directive Description Table Page 0215

--- a/web.iras3/public/index.html
+++ b/web.iras3/public/index.html
@@ -84,6 +84,14 @@ Application Controllers
 <script src="/modules/summary-table-chart/summary-table-chart-directive.js"></script>
 <link href="/modules/summary-table-chart/summary-table-chart-directive.css" rel="stylesheet">
 
+<!-- Description Table Module -->
+<script src="/modules/description-table-chart/description-table-chart-module.js"></script>
+<!-- Directives -->
+<script src="/modules/description-table-chart/description-table-chart-directive.js"></script>
+<link href="/modules/description-table-chart/description-table-chart-directive.css" rel="stylesheet">
+
+
+
 <!-- Chart Module -->
 <script src="/modules/chart/chart-module.js"></script>
 <!-- Services -->
@@ -99,12 +107,17 @@ Application Controllers
 <script src="/modules/full-table-chart-page-0215/full-table-chart-page-0215.js"></script>
 <link href="/modules/full-table-chart-page-0215/full-table-chart-page-0215.css" rel="stylesheet">
 
-
 <!-- Summary Table Chart Page 0215 Module -->
-<script src="/modules/summary-table-chart-page-0215/summary-table-chart-page-0215-module.js"></script>   
+<script src="/modules/summary-table-chart-page-0215/summary-table-chart-page-0215-module.js"></script>
 <!-- Pages -->
 <script src="/modules/summary-table-chart-page-0215/summary-table-chart-page-0215.js"></script>
 <link href="/modules/summary-table-chart-page-0215/summary-table-chart-page-0215.css" rel="stylesheet">
+
+<!-- Description Table Chart Page 0215 Module -->
+<script src="/modules/description-table-chart-page-0215/description-table-chart-page-0215-module.js"></script>
+<!-- Pages -->
+<script src="/modules/description-table-chart-page-0215/description-table-chart-page-0215.js"></script>
+<link href="/modules/description-table-chart-page-0215/description-table-chart-page-0215.css" rel="stylesheet">
 
 
 <!-- Chart Filter Page Module -->
