Plain Full Table Chart Directive Full Table Chart Directive Plain Full Table Chart Page Full Table Chart Page

--- a/web.iras3/public/index.html
+++ b/web.iras3/public/index.html
@@ -78,6 +78,12 @@ Application Controllers
 <script src="/modules/full-table-chart/full-table-chart-directive.js"></script>
 <link href="/modules/full-table-chart/full-table-chart-directive.css" rel="stylesheet">
 
+<!-- Plain Full Table Module -->
+<script src="/modules/plain-full-table-chart/plain-full-table-chart-module.js"></script>
+<!-- Directives -->
+<script src="/modules/plain-full-table-chart/plain-full-table-chart-directive.js"></script>
+<link href="/modules/plain-full-table-chart/plain-full-table-chart-directive.css" rel="stylesheet">
+
 <!-- Summary Table Module -->
 <script src="/modules/summary-table-chart/summary-table-chart-module.js"></script>
 <!-- Directives -->
@@ -106,6 +112,12 @@ Application Controllers
 <!-- Pages -->
 <script src="/modules/full-table-chart-page-0215/full-table-chart-page-0215.js"></script>
 <link href="/modules/full-table-chart-page-0215/full-table-chart-page-0215.css" rel="stylesheet">
+
+<!-- Plain Full Table Chart Page 0215 Module -->
+<script src="/modules/plain-full-table-chart-page-0215/plain-full-table-chart-page-0215-module.js"></script>
+<!-- Pages -->
+<script src="/modules/plain-full-table-chart-page-0215/plain-full-table-chart-page-0215.js"></script>
+<link href="/modules/plain-full-table-chart-page-0215/plain-full-table-chart-page-0215.css" rel="stylesheet">
 
 <!-- Summary Table Chart Page 0215 Module -->
 <script src="/modules/summary-table-chart-page-0215/summary-table-chart-page-0215-module.js"></script>
