--- a/web.iras3/public/modules/chart-filter-page-0215/chart-filter-page-0215.html
+++ b/web.iras3/public/modules/chart-filter-page-0215/chart-filter-page-0215.html
@@ -21,6 +21,9 @@
 							<button type="button" class="btn btn-default" aria-label="Summary Table" data-ng-click="summaryTableButtonClicked()">
 								<span class="mif-table"></span>&nbsp;<b>S</b>
 							</button>
+							<button type="button" class="btn btn-default" aria-label="Plain Table" data-ng-click="plainFullTableButtonClicked()">
+								<span class="mif-table"></span>&nbsp;<b>P</b>
+							</button>
 						</div>
 
 						<div class="btn-group btn-group" role="group" aria-label="Chart Type">
