--- a/web.iras3/public/index.html
+++ b/web.iras3/public/index.html
@@ -30,6 +30,7 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="/underscore/underscore-min.js"></script>
+<script type="text/javascript" src="/underscore.string/underscore.string.min.js"></script>
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
@@ -96,7 +97,11 @@ Application Controllers
 <script src="/modules/description-table-chart/description-table-chart-directive.js"></script>
 <link href="/modules/description-table-chart/description-table-chart-directive.css" rel="stylesheet">
 
-
+<!-- Column Module -->
+<script src="/modules/column-chart/column-chart-module.js"></script>
+<!-- Directives -->
+<script src="/modules/column-chart/column-chart-directive.js"></script>
+<link href="/modules/column-chart/column-chart-directive.css" rel="stylesheet">
 
 <!-- Chart Module -->
 <script src="/modules/chart/chart-module.js"></script>
@@ -130,6 +135,13 @@ Application Controllers
 <!-- Pages -->
 <script src="/modules/description-table-chart-page-0215/description-table-chart-page-0215.js"></script>
 <link href="/modules/description-table-chart-page-0215/description-table-chart-page-0215.css" rel="stylesheet">
+
+<!-- Column Chart Page 0215 Module -->
+<script src="/modules/column-chart-page-0215/column-chart-page-0215-module.js"></script>
+<!-- Pages -->
+<script src="/modules/column-chart-page-0215/column-chart-page-0215.js"></script>
+<link href="/modules/column-chart-page-0215/column-chart-page-0215.css" rel="stylesheet">
+
 
 
 <!-- Chart Filter Page Module -->
