Bar Chart Directive Bar Chart Page 0215

--- a/web.iras3/public/index.html
+++ b/web.iras3/public/index.html
@@ -103,6 +103,13 @@ Application Controllers
 <script src="/modules/column-chart/column-chart-directive.js"></script>
 <link href="/modules/column-chart/column-chart-directive.css" rel="stylesheet">
 
+<!-- Column Module -->
+<script src="/modules/bar-chart/bar-chart-module.js"></script>
+<!-- Directives -->
+<script src="/modules/bar-chart/bar-chart-directive.js"></script>
+<link href="/modules/bar-chart/bar-chart-directive.css" rel="stylesheet">
+
+
 <!-- Chart Module -->
 <script src="/modules/chart/chart-module.js"></script>
 <!-- Services -->
@@ -142,7 +149,11 @@ Application Controllers
 <script src="/modules/column-chart-page-0215/column-chart-page-0215.js"></script>
 <link href="/modules/column-chart-page-0215/column-chart-page-0215.css" rel="stylesheet">
 
-
+<!-- Bar Chart Page 0215 Module -->
+<script src="/modules/bar-chart-page-0215/bar-chart-page-0215-module.js"></script>
+<!-- Pages -->
+<script src="/modules/bar-chart-page-0215/bar-chart-page-0215.js"></script>
+<link href="/modules/bar-chart-page-0215/bar-chart-page-0215.css" rel="stylesheet">
 
 <!-- Chart Filter Page Module -->
 <script src="/modules/chart-filter-page-0215/chart-filter-page-0215-module.js"></script>
