--- a/web.iras3/public/modules/chart-filter-page-0215/chart-filter-page-0215.html
+++ b/web.iras3/public/modules/chart-filter-page-0215/chart-filter-page-0215.html
@@ -31,6 +31,10 @@
 								<span class="mif-chart-bars"></span>
 							</button>
 
+							<button type="button" class="btn btn-default" aria-label="Bar Chart" data-ng-click="barChartButtonClicked()">
+								<span class="mif-chart-bars2"></span>
+							</button>
+
 							<button type="button" class="btn btn-default" aria-label="Line Chart" data-ng-click="lineChartButtonClicked()">
 								<span class="mif-chart-line"></span>
 							</button>
