Line Chart Directive Line Chart Page 0215

--- a/web.iras3/public/index.html
+++ b/web.iras3/public/index.html
@@ -103,12 +103,17 @@ Application Controllers
 <script src="/modules/column-chart/column-chart-directive.js"></script>
 <link href="/modules/column-chart/column-chart-directive.css" rel="stylesheet">
 
-<!-- Column Module -->
+<!-- Bar Module -->
 <script src="/modules/bar-chart/bar-chart-module.js"></script>
 <!-- Directives -->
 <script src="/modules/bar-chart/bar-chart-directive.js"></script>
 <link href="/modules/bar-chart/bar-chart-directive.css" rel="stylesheet">
 
+<!-- Line Module -->
+<script src="/modules/line-chart/line-chart-module.js"></script>
+<!-- Directives -->
+<script src="/modules/line-chart/line-chart-directive.js"></script>
+<link href="/modules/line-chart/line-chart-directive.css" rel="stylesheet">
 
 <!-- Chart Module -->
 <script src="/modules/chart/chart-module.js"></script>
@@ -154,6 +159,13 @@ Application Controllers
 <!-- Pages -->
 <script src="/modules/bar-chart-page-0215/bar-chart-page-0215.js"></script>
 <link href="/modules/bar-chart-page-0215/bar-chart-page-0215.css" rel="stylesheet">
+
+<!-- Line Chart Page 0215 Module -->
+<script src="/modules/line-chart-page-0215/line-chart-page-0215-module.js"></script>
+<!-- Pages -->
+<script src="/modules/line-chart-page-0215/line-chart-page-0215.js"></script>
+<link href="/modules/line-chart-page-0215/line-chart-page-0215.css" rel="stylesheet">
+
 
 <!-- Chart Filter Page Module -->
 <script src="/modules/chart-filter-page-0215/chart-filter-page-0215-module.js"></script>
