Area Chart Directive Area Chart Page 0215

--- a/web.iras3/public/index.html
+++ b/web.iras3/public/index.html
@@ -115,6 +115,12 @@ Application Controllers
 <script src="/modules/line-chart/line-chart-directive.js"></script>
 <link href="/modules/line-chart/line-chart-directive.css" rel="stylesheet">
 
+<!-- Area Module -->
+<script src="/modules/area-chart/area-chart-module.js"></script>
+<!-- Directives -->
+<script src="/modules/area-chart/area-chart-directive.js"></script>
+<link href="/modules/area-chart/area-chart-directive.css" rel="stylesheet">
+
 <!-- Chart Module -->
 <script src="/modules/chart/chart-module.js"></script>
 <!-- Services -->
@@ -165,6 +171,12 @@ Application Controllers
 <!-- Pages -->
 <script src="/modules/line-chart-page-0215/line-chart-page-0215.js"></script>
 <link href="/modules/line-chart-page-0215/line-chart-page-0215.css" rel="stylesheet">
+
+<!-- Area Chart Page 0215 Module -->
+<script src="/modules/area-chart-page-0215/area-chart-page-0215-module.js"></script>
+<!-- Pages -->
+<script src="/modules/area-chart-page-0215/area-chart-page-0215.js"></script>
+<link href="/modules/area-chart-page-0215/area-chart-page-0215.css" rel="stylesheet">
 
 
 <!-- Chart Filter Page Module -->
