Pie Chart (not finished)

--- a/web.iras3/public/index.html
+++ b/web.iras3/public/index.html
@@ -121,6 +121,18 @@ Application Controllers
 <script src="/modules/area-chart/area-chart-directive.js"></script>
 <link href="/modules/area-chart/area-chart-directive.css" rel="stylesheet">
 
+<!-- Pie Module -->
+<script src="/modules/pie-chart/pie-chart-module.js"></script>
+<!-- Directives -->
+<script src="/modules/pie-chart/pie-chart-directive.js"></script>
+<link href="/modules/pie-chart/pie-chart-directive.css" rel="stylesheet">
+
+<!-- Pie Module -->
+<script src="/modules/pie-chart-2/pie-chart-2-module.js"></script>
+<!-- Directives -->
+<script src="/modules/pie-chart-2/pie-chart-2-directive.js"></script>
+<link href="/modules/pie-chart-2/pie-chart-2-directive.css" rel="stylesheet">
+
 <!-- Chart Module -->
 <script src="/modules/chart/chart-module.js"></script>
 <!-- Services -->
@@ -177,6 +189,18 @@ Application Controllers
 <!-- Pages -->
 <script src="/modules/area-chart-page-0215/area-chart-page-0215.js"></script>
 <link href="/modules/area-chart-page-0215/area-chart-page-0215.css" rel="stylesheet">
+
+<!-- Pie Chart Page 0215 Module -->
+<script src="/modules/pie-chart-page-0215/pie-chart-page-0215-module.js"></script>
+<!-- Pages -->
+<script src="/modules/pie-chart-page-0215/pie-chart-page-0215.js"></script>
+<link href="/modules/pie-chart-page-0215/pie-chart-page-0215.css" rel="stylesheet">
+
+<!-- Pie Chart 2 Page 0215 Module -->
+<script src="/modules/pie-chart-2-page-0215/pie-chart-2-page-0215-module.js"></script>
+<!-- Pages -->
+<script src="/modules/pie-chart-2-page-0215/pie-chart-2-page-0215.js"></script>
+<link href="/modules/pie-chart-2-page-0215/pie-chart-2-page-0215.css" rel="stylesheet">
 
 
 <!-- Chart Filter Page Module -->
