--- a/web.iras3/public/modules/chart-filter-page-0215/chart-filter-page-0215.html
+++ b/web.iras3/public/modules/chart-filter-page-0215/chart-filter-page-0215.html
@@ -30,11 +30,12 @@
 							<button type="button" class="btn btn-default" aria-label="Column Chart" data-ng-click="columnChartButtonClicked()">
 								<span class="mif-chart-bars"></span>
 							</button>
-
 							<button type="button" class="btn btn-default" aria-label="Bar Chart" data-ng-click="barChartButtonClicked()">
 								<span class="mif-chart-bars2"></span>
 							</button>
+						</div>
 
+						<div class="btn-group btn-group" role="group" aria-label="Chart Type">
 							<button type="button" class="btn btn-default" aria-label="Line Chart" data-ng-click="lineChartButtonClicked()">
 								<span class="mif-chart-line"></span>
 							</button>
@@ -42,9 +43,14 @@
 							<button type="button" class="btn btn-default" aria-label="Area Chart" data-ng-click="areaChartButtonClicked()">
 								<span class="icon-graph"></span>
 							</button>
-
+						</div>
+						
+						<div class="btn-group btn-group" role="group" aria-label="Chart Type">
 							<button type="button" class="btn btn-default" aria-label="Pie Chart" data-ng-click="pieChartButtonClicked()">
-								<span class="mif-chart-pie"></span>
+								<span class="mif-chart-pie"></span>&nbsp;Y
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Pie Chart2" data-ng-click="pieChart2ButtonClicked()">
+								<span class="mif-chart-pie"></span>&nbsp;D
 							</button>
 						</div>
 
