Pie Chart Fixed (view)

--- a/web.iras3/public/index.html
+++ b/web.iras3/public/index.html
@@ -209,6 +209,13 @@ Application Controllers
 <script src="/modules/chart-filter-page-0215/chart-filter-page-0215.js"></script>
 <link href="/modules/chart-filter-page-0215/chart-filter-page-0215.css" rel="stylesheet">
 
+<!-- Pie Chart Filter Page Module -->
+<script src="/modules/pie-chart-filter-page-0215/pie-chart-filter-page-0215-module.js"></script>
+<!-- Pages -->
+<script src="/modules/pie-chart-filter-page-0215/pie-chart-filter-page-0215.js"></script>
+<link href="/modules/pie-chart-filter-page-0215/pie-chart-filter-page-0215.css" rel="stylesheet">
+
+
 <!-- Application Module -->
 <script src="/modules/app/app.js"></script>
 <script src="/modules/app/route.js"></script>
