--- a/web.iras3/public/modules/chart-filter-page-0215/chart-filter-page-0215.html
+++ b/web.iras3/public/modules/chart-filter-page-0215/chart-filter-page-0215.html
@@ -47,10 +47,10 @@
 						
 						<div class="btn-group btn-group" role="group" aria-label="Chart Type">
 							<button type="button" class="btn btn-default" aria-label="Pie Chart" data-ng-click="pieChartButtonClicked()">
-								<span class="mif-chart-pie"></span>&nbsp;Y
+								<span class="mif-chart-pie"></span>&nbsp;<b>Y</b>
 							</button>
 							<button type="button" class="btn btn-default" aria-label="Pie Chart2" data-ng-click="pieChart2ButtonClicked()">
-								<span class="mif-chart-pie"></span>&nbsp;D
+								<span class="mif-chart-pie"></span>&nbsp;<b>D</b>
 							</button>
 						</div>
 
